--- a/.codenvy/project.json
+++ b/.codenvy/project.json
@@ -1,1 +1,1 @@
-{"mixinTypes":["contribution"],"builders":{"configs":{}},"runners":{"configs":{}},"description":"","type":"blank","attributes":{"contribute_branch":["master"],"contribute_mode":["contribute"]}}
+{"mixinTypes":[],"builders":{"configs":{}},"runners":{"configs":{"system:/javascript/web/simple":{"ram":128,"variables":{},"options":{}}},"default":"system:/javascript/web/simple"},"description":"","type":"blank","attributes":{}}
