URL parameters enabled

--- a/.codenvy/project.json
+++ b/.codenvy/project.json
@@ -1,1 +1,1 @@
-{"mixinTypes":[],"builders":{"configs":{}},"runners":{"configs":{"system:/javascript/web/simple":{"ram":128,"variables":{},"options":{}}},"default":"system:/javascript/web/simple"},"description":"","type":"blank","attributes":{}}
+{"mixinTypes":["contribution"],"builders":{"configs":{}},"runners":{"configs":{"system:/javascript/web/simple":{"ram":128,"variables":{},"options":{}}},"default":"system:/javascript/web/simple"},"description":"","type":"blank","attributes":{"contribute_branch":["gh-pages"],"contribute_mode":["contribute"]}}
